# RAG

./: .gitignore  README.md  commands  pyproject.toml
notebook/: document.ipynb  pdf_loader.ipynb
